--- a/app/src/main/res/layout/activity_code_verification.xml
+++ b/app/src/main/res/layout/activity_code_verification.xml
@@ -19,14 +19,13 @@
     <EditText
         android:id="@+id/verification_ET"
         android:layout_width="150dp"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/txt1"
-        android:hint="123456"
+        android:background="@drawable/edit_text_design"
         android:gravity="center"
-        android:textSize="35sp"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
+        android:textSize="25sp"
+        android:inputType="number"
         android:layout_marginTop="30dp"/>
 
     <Button
