--- a/app/src/main/res/drawable/edit_text_design.xml
+++ b/app/src/main/res/drawable/edit_text_design.xml
@@ -7,7 +7,7 @@
         android:height="50dp"/>
 
     <stroke android:width="1dp"
-        android:color="@color/colorAccent"/>
+        android:color="#DDC50F"/>
 
     <corners android:radius="5dp"/>
 
