new design Commit

--- a/app/src/main/res/layout/activity_code_verification.xml
+++ b/app/src/main/res/layout/activity_code_verification.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CodeVerification">
+    tools:context=".CodeVerification"
+    android:background="@color/colorYellow">
 
     <TextView
         android:id="@+id/txt1"
@@ -12,6 +13,8 @@
         android:layout_height="wrap_content"
         android:text="Verification Code"
         android:textSize="35sp"
+        android:textStyle="bold"
+        android:textColor="@android:color/white"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"/>
 
@@ -29,13 +32,16 @@
         android:layout_marginTop="30dp"/>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="60dp"
         android:text="Next"
         android:id="@+id/nextbtn2"
         android:textSize="35sp"
         android:layout_marginTop="150dp"
         android:layout_centerHorizontal="true"
+        android:textColor="@color/colorYellow"
+        android:background="@android:color/white"
+
         android:layout_below="@+id/verification_ET"/>
 
 </RelativeLayout>
