--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,14 +4,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Splash">
+    tools:context=".Splash"
+    android:background="@color/colorYellow">
 
     <TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Welcome"
-    android:textSize="45sp"
-    android:layout_centerHorizontal="true"
-    android:layout_centerVertical="true"/>
+        android:id="@+id/tourtv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="450dp"
+        android:fontFamily="@font/bree_serif"
+        android:text="Tour Guide"
+        android:textColor="@android:color/white"
+        android:textSize="50sp" />
+
+    <TextView
+        android:id="@+id/ball1"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginStart="80dp"
+        android:background="@drawable/round_ball_design"/>
+
+    <TextView
+        android:id="@+id/ball2"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginStart="250dp"
+        android:background="@drawable/round_ball_design"/>
+    <ImageView
+        android:id="@+id/logoIV"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:src="@drawable/icon"
+        android:layout_marginTop="180dp"
+        android:layout_centerHorizontal="true"/>
+
 
 </RelativeLayout>
