--- a/app/src/main/res/drawable/round_ball_design.xml
+++ b/app/src/main/res/drawable/round_ball_design.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android" >
 
-
-    <size android:width="100dp"
+    <size
+        android:width="50dp"
         android:height="50dp"/>
 
+    <corners android:radius="50dp"/>
     <stroke android:width="2dp"
-        android:color="@android:color/white"/>
+        android:color="@color/colorYellow"/>
+    <solid android:color="@android:color/white"/>
 
-    <corners android:radius="5dp"/>
+
+
+
+
 
 </shape>
