--- a/app/src/main/res/layout/activity_access_phone_number.xml
+++ b/app/src/main/res/layout/activity_access_phone_number.xml
@@ -4,23 +4,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AccessPhoneNumber">
+    tools:context=".AccessPhoneNumber"
+    android:background="@color/colorYellow">
     <TextView
         android:id="@+id/txt1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/verify_your_number"
         android:textSize="35sp"
+        android:textStyle="bold"
+        android:textColor="@android:color/white"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"/>
+    <TextView
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/txt1"
+        android:textSize="30sp"
+        android:layout_marginStart="40dp"
+        android:text="+88"
+        android:textColorHint="@android:color/white"
+        android:clickable="false"
+        android:layout_marginTop="50dp"
+        android:gravity="center"
+        android:textColor="@android:color/white"
+        android:background="@drawable/edit_text_design"/>
 
     <EditText
         android:id="@+id/phone_ET"
-        android:layout_width="250dp"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
-        android:hint="@string/phone_number"
-        android:layout_centerHorizontal="true"
-        android:textSize="25sp"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
+        android:layout_marginStart="150dp"
+        android:textSize="30sp"
         android:layout_marginTop="50dp"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
@@ -30,13 +47,16 @@
 
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="60dp"
         android:text="@string/next"
-        android:textSize="30sp"
+        android:textSize="35sp"
         android:id="@+id/nextbtn1"
         android:layout_below="@+id/phone_ET"
         android:layout_marginTop="100dp"
+        android:background="@android:color/white"
+        android:textColor="@color/colorYellow"
+        android:textStyle="bold"
         android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
