--- a/app/src/main/res/drawable/edit_text_design.xml
+++ b/app/src/main/res/drawable/edit_text_design.xml
@@ -6,8 +6,8 @@
     <size android:width="100dp"
         android:height="50dp"/>
 
-    <stroke android:width="2dp"
-        android:color="@android:color/white"/>
+    <stroke android:width="1dp"
+        android:color="@color/colorYellow"/>
 
     <corners android:radius="5dp"/>
 
