--- a/app/src/main/res/layout/activity_access_phone_number.xml
+++ b/app/src/main/res/layout/activity_access_phone_number.xml
@@ -5,15 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AccessPhoneNumber"
-    android:background="@color/colorYellow">
+    android:background="#fff">
     <TextView
         android:id="@+id/txt1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/verify_your_number"
         android:textSize="35sp"
-        android:textStyle="bold"
-        android:textColor="@android:color/white"
+        android:textColor="#000"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"/>
     <TextView
@@ -23,7 +22,6 @@
         android:textSize="30sp"
         android:layout_marginStart="40dp"
         android:text="+88"
-        android:textColorHint="@android:color/white"
         android:clickable="false"
         android:layout_marginTop="50dp"
         android:gravity="center"
@@ -34,8 +32,7 @@
         android:id="@+id/phone_ET"
         android:layout_width="220dp"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/white"
-        android:textColorHint="@android:color/white"
+        android:textColor="#000"
         android:layout_marginStart="150dp"
         android:textSize="30sp"
         android:layout_marginTop="50dp"
@@ -50,13 +47,13 @@
         android:layout_width="120dp"
         android:layout_height="60dp"
         android:text="@string/next"
-        android:textSize="35sp"
+        android:textSize="25dp"
         android:id="@+id/nextbtn1"
         android:layout_below="@+id/phone_ET"
         android:layout_marginTop="100dp"
-        android:background="@android:color/white"
+        android:background="@drawable/custom_btn"
         android:textColor="@color/colorYellow"
-        android:textStyle="bold"
+
         android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
