--- a/app/src/main/res/layout/activity_code_verification.xml
+++ b/app/src/main/res/layout/activity_code_verification.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CodeVerification"
-    android:background="@color/colorYellow">
+    android:background="#fff">
 
     <TextView
         android:id="@+id/txt1"
@@ -13,20 +13,20 @@
         android:layout_height="wrap_content"
         android:text="Verification Code"
         android:textSize="35sp"
-        android:textStyle="bold"
-        android:textColor="@android:color/white"
+        android:textColor="@color/colorPrimaryDark"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"/>
 
 
     <EditText
         android:id="@+id/verification_ET"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
+        android:layout_width="180dp"
+        android:layout_height="50dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/txt1"
         android:background="@drawable/edit_text_design"
         android:gravity="center"
+        android:textAlignment="center"
         android:textSize="25sp"
         android:inputType="number"
         android:layout_marginTop="30dp"/>
@@ -36,12 +36,11 @@
         android:layout_height="60dp"
         android:text="Next"
         android:id="@+id/nextbtn2"
-        android:textSize="35sp"
+        android:textSize="25dp"
         android:layout_marginTop="150dp"
         android:layout_centerHorizontal="true"
         android:textColor="@color/colorYellow"
-        android:background="@android:color/white"
-
+        android:background="@drawable/custom_btn"
         android:layout_below="@+id/verification_ET"/>
 
 </RelativeLayout>
