--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -4,54 +4,60 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#fff"
     tools:context=".Password">
 
     <TextView
+        android:id="@+id/txt1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sign Up"
-        android:textSize="35sp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
-        android:id="@+id/txt1"/>
+        android:text="Sign Up"
+        android:textSize="35sp" />
 
 
     <com.google.android.material.textfield.TextInputLayout
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:id="@+id/name_TIL"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/txt1"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
-        android:layout_below="@+id/txt1">
+        android:background="@drawable/edit_text_design">
+
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/name_ET"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/name"
-            android:textSize="21sp"
+            android:inputType="text"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
-            android:inputType="text"/>
+            android:textSize="21sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
+
     <com.google.android.material.textfield.TextInputLayout
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:id="@+id/password_TIL"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/name_TIL"
+        android:background="@drawable/edit_text_design"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:layout_below="@+id/name_TIL">
+        android:layout_marginTop="20dp">
+
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/password_ET"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/password"
-            android:textSize="21sp"
+            android:inputType="textPassword"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
-            android:inputType="textPassword"/>
+            android:textSize="21sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -59,10 +65,12 @@
         android:id="@+id/signin_BTN"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sing In"
-        android:textAllCaps="false"
         android:layout_below="@id/password_TIL"
+        android:background="@drawable/custom_btn"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"/>
+        android:layout_marginTop="50dp"
+        android:text="Sign Up"
+        android:textColor="@color/colorYellow"
+        android:textAllCaps="false" />
 
 </RelativeLayout>
