New Design commit

--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
-    tools:context=".Password">
+    tools:context=".Password"
+    >
 
     <TextView
         android:id="@+id/txt1"
@@ -14,23 +15,27 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
         android:text="Sign Up"
+        android:textStyle="bold"
+        android:textColor="@android:color/black"
         android:textSize="35sp" />
 
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/name_TIL"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-        android:layout_width="250dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txt1"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
         android:background="@drawable/edit_text_design">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/name_ET"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:hint="@string/name"
             android:inputType="text"
             android:paddingStart="20dp"
@@ -42,17 +47,19 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/password_TIL"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-        android:layout_width="250dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/name_TIL"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:background="@drawable/edit_text_design"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="10dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/password_ET"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:hint="@string/password"
             android:inputType="textPassword"
             android:paddingStart="20dp"
@@ -63,12 +70,14 @@
 
     <Button
         android:id="@+id/signin_BTN"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/password_TIL"
         android:background="@drawable/custom_btn"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="30dp"
         android:text="Sign Up"
         android:textColor="@color/colorYellow"
         android:textAllCaps="false" />
