--- a/app/src/main/res/drawable/round_ball_design.xml
+++ b/app/src/main/res/drawable/round_ball_design.xml
@@ -10,7 +10,7 @@
     <corners android:radius="50dp"/>
     <stroke android:width="2dp"
         android:color="@color/colorYellow"/>
-    <solid android:color="@android:color/white"/>
+    <solid android:color="@color/colorYellow"/>
 
 
 
