--- a/app/src/main/res/layout/activity_access_phone_number.xml
+++ b/app/src/main/res/layout/activity_access_phone_number.xml
@@ -15,45 +15,56 @@
         android:textColor="#000"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"/>
-    <TextView
-        android:layout_width="80dp"
+
+    <LinearLayout
+        android:id="@+id/liner1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/txt1"
-        android:textSize="30sp"
-        android:layout_marginStart="40dp"
-        android:text="+88"
-        android:clickable="false"
+        android:orientation="horizontal"
         android:layout_marginTop="50dp"
+        android:layout_below="@+id/txt1"
+        android:weightSum="1">
+    <TextView
+        android:layout_width="0dp"
+        android:layout_weight=".3"
+        android:layout_height="wrap_content"
+        android:textSize="30sp"
+        android:text="+88"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="10dp"
+        android:clickable="false"
         android:gravity="center"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         android:background="@drawable/edit_text_design"/>
 
     <EditText
         android:id="@+id/phone_ET"
-        android:layout_width="220dp"
+        android:layout_width="0dp"
+        android:layout_weight=".7"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="10dp"
         android:textColor="#000"
-        android:layout_marginStart="150dp"
         android:textSize="30sp"
-        android:layout_marginTop="50dp"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp"
         android:inputType="phone"
-        android:background="@drawable/edit_text_design"
-        android:layout_below="@+id/txt1"/>
-
+        android:paddingStart="30sp"
+        android:paddingEnd="30sp"
+        android:background="@drawable/edit_text_design" />
+    </LinearLayout>
 
     <Button
-        android:layout_width="120dp"
-        android:layout_height="60dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="@string/next"
-        android:textSize="25dp"
+        android:textSize="30sp"
         android:id="@+id/nextbtn1"
-        android:layout_below="@+id/phone_ET"
-        android:layout_marginTop="100dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_below="@+id/liner1"
+        android:layout_marginTop="30dp"
         android:background="@drawable/custom_btn"
         android:textColor="@color/colorYellow"
-
+        android:textAllCaps="false"
         android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
