--- a/app/src/main/res/layout/activity_code_verification.xml
+++ b/app/src/main/res/layout/activity_code_verification.xml
@@ -4,43 +4,48 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CodeVerification"
-    android:background="#fff">
+    android:background="#fff"
+    tools:context=".CodeVerification">
 
     <TextView
         android:id="@+id/txt1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Verification Code"
-        android:textSize="35sp"
-        android:textColor="@color/colorPrimaryDark"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"/>
+        android:layout_marginTop="100dp"
+        android:text="Verification Code"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="35sp" />
 
 
     <EditText
         android:id="@+id/verification_ET"
-        android:layout_width="180dp"
-        android:layout_height="50dp"
-        android:layout_centerHorizontal="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/txt1"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="20dp"
         android:background="@drawable/edit_text_design"
         android:gravity="center"
-        android:textAlignment="center"
-        android:textSize="25sp"
         android:inputType="number"
-        android:layout_marginTop="30dp"/>
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
+        android:textSize="30sp" />
 
     <Button
-        android:layout_width="120dp"
-        android:layout_height="60dp"
-        android:text="Next"
         android:id="@+id/nextbtn2"
-        android:textSize="25dp"
-        android:layout_marginTop="150dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/verification_ET"
         android:layout_centerHorizontal="true"
-        android:textColor="@color/colorYellow"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:background="@drawable/custom_btn"
-        android:layout_below="@+id/verification_ET"/>
+        android:text="Next"
+        android:textAllCaps="false"
+        android:textColor="@color/colorYellow"
+        android:textSize="30sp" />
 
 </RelativeLayout>
