--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="450dp"
         android:fontFamily="@font/bree_serif"
         android:text="Tour Guide"
-        android:textColor="@android:color/white"
+        android:textColor="@color/colorYellow"
         android:textSize="50sp" />
 
     <TextView
@@ -41,5 +41,15 @@
         android:layout_marginTop="180dp"
         android:layout_centerHorizontal="true"/>
 
+    <!---
+    <TextView
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerVertical="true"
+        android:layout_marginBottom="150dp"
+        android:background="@drawable/round_ball_design" />
 
+-->
 </RelativeLayout>
