--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
-    tools:context=".Password"
+    tools:context=".Activities.SignIn"
     >
 
     <TextView
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
-        android:text="Sign Up"
+        android:text="Sign In"
         android:textStyle="bold"
         android:textColor="@android:color/black"
         android:textSize="35sp" />
@@ -36,7 +36,7 @@
             android:id="@+id/name_ET"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="@string/name"
+            android:hint="Email"
             android:inputType="text"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
@@ -56,7 +56,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp">
 
-        <com.google.android.material.textfield.TextInputEditText
+        <EditText
             android:id="@+id/password_ET"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -78,8 +78,33 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginTop="30dp"
-        android:text="Sign Up"
+        android:text="Sign In"
         android:textColor="@color/colorYellow"
         android:textAllCaps="false" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="15dp"
+        android:gravity="center">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Don't have any account! "
+            android:textColor="@color/colorYellow"
+            />
+        <TextView
+            android:id="@+id/signupTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/sign_up"
+            android:layout_marginLeft="5dp"
+            android:textColor="#000"
+            android:textStyle="bold"/>
+    </LinearLayout>
+
+
 
 </RelativeLayout>
