--- a/app/src/main/res/layout/activity_term__and__condition.xml
+++ b/app/src/main/res/layout/activity_term__and__condition.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Term_And_Condition">
+    tools:context=".Activities.Term_And_Condition">
 
     <TextView
         android:id="@+id/txt3"
