--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -41,15 +41,17 @@
         android:layout_marginTop="180dp"
         android:layout_centerHorizontal="true"/>
 
-    <!---
+
     <TextView
+        android:id="@+id/ball3"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_centerVertical="true"
-        android:layout_marginBottom="150dp"
+        android:layout_marginEnd="29dp"
+        android:layout_marginBottom="148dp"
         android:background="@drawable/round_ball_design" />
 
--->
+
 </RelativeLayout>
