--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#face2f</color>
 
     <color name="colorYellow">#face2f</color>
+    <color name="colorBlack">#000</color>
 </resources>
