--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -8,6 +8,14 @@
     android:background="@android:color/white">
 
 
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_arrow_back_black_24dp"
+        android:background="#fff"
+        android:layout_margin="15dp"
+        android:id="@+id/backBtn"/>
+
     <TextView
         android:id="@+id/txt1"
         android:layout_width="wrap_content"
@@ -19,25 +27,55 @@
         android:textColor="@android:color/black"
         android:textSize="35sp" />
 
-
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/name_TIL"
+        android:id="@+id/username_TIL"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txt1"
-        android:layout_marginEnd="20dp"
-        android:hint="Email"
-        android:textColorHint="@color/colorYellow"
         android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:hint="UserName"
+        android:textColorHint="@color/colorYellow"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp">
+
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/name_ET"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text"
+            android:textColor="#000"
+            android:maxLines="1"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:textSize="21sp"
+            android:background="@drawable/edit_text_design"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/email_TIL"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/username_TIL"
+        android:layout_marginEnd="20dp"
+        android:hint="Email"
+        android:textColorHint="@color/colorYellow"
+        android:layout_marginStart="20dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/email_ET"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
+            android:textColor="#000"
+            android:maxLines="1"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
             android:textSize="21sp"
@@ -50,7 +88,7 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/name_TIL"
+        android:layout_below="@+id/email_TIL"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:hint="@string/password"
@@ -64,7 +102,64 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
+            android:textColor="#000"
+            android:maxLines="1"
             android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:textSize="21sp"
+            android:background="@drawable/edit_text_design"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/phone_TIL"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/password_TIL"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:hint="Phone No"
+        android:textColorHint="@color/colorYellow"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp">
+
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/phoneEt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:textColor="#000"
+            android:maxLines="1"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:textSize="21sp"
+            android:background="@drawable/edit_text_design"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/address_TIL"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/phone_TIL"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:hint="Address"
+        android:textColorHint="@color/colorYellow"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp">
+
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/address_ET"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:paddingStart="20dp"
+            android:textColor="#000"
             android:paddingEnd="20dp"
             android:textSize="21sp"
             android:background="@drawable/edit_text_design"/>
@@ -75,7 +170,7 @@
         android:id="@+id/signup_BTN"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/password_TIL"
+        android:layout_below="@id/address_TIL"
         android:background="@drawable/custom_btn"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="20dp"
