--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -38,7 +38,9 @@
             android:id="@+id/name_ET"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:inputType="text"
+            android:inputType="textEmailAddress"
+            android:textColor="#000"
+            android:maxLines="1"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
             android:textSize="21sp"
@@ -65,6 +67,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
+            android:textColor="#000"
+            android:maxLines="1"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
             android:textSize="21sp"
