ic_arrow_back_black_24dp.xml missing solved and password show n hide added.

--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -39,11 +39,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:inputType="textEmailAddress"
-            android:textColor="#000"
             android:maxLines="1"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
             android:textSize="21sp"
+            android:textColor="@color/colorBlack"
             android:background="@drawable/edit_text_design" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -59,6 +59,8 @@
         android:hint="@string/password"
         android:textColorHint="@color/colorYellow"
         android:layout_centerHorizontal="true"
+        app:passwordToggleEnabled="true"
+        app:passwordToggleTint="@android:color/holo_orange_light"
         android:layout_marginTop="10dp"
         >
 
@@ -67,11 +69,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:textColor="#000"
             android:maxLines="1"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
             android:textSize="21sp"
+            android:textColor="@color/colorBlack"
             android:background="@drawable/edit_text_design"/>
 
     </com.google.android.material.textfield.TextInputLayout>
