--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -45,13 +45,13 @@
             android:id="@+id/name_ET"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/edit_text_design"
             android:inputType="text"
             android:textColor="#000"
             android:maxLines="1"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
-            android:textSize="21sp"
-            android:background="@drawable/edit_text_design"/>
+            android:textSize="21sp"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -74,12 +74,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
-            android:textColor="#000"
             android:maxLines="1"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
-            android:textSize="21sp"
-            android:background="@drawable/edit_text_design"/>
+            android:textColor="@color/colorBlack"
+            android:textColorLink="#000000"
+            android:textSize="21sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -94,6 +94,8 @@
         android:hint="@string/password"
         android:textColorHint="@color/colorYellow"
         android:layout_centerHorizontal="true"
+        app:passwordToggleEnabled="true"
+        app:passwordToggleTint="@android:color/holo_orange_light"
         android:layout_marginTop="10dp">
 
 
@@ -159,9 +161,9 @@
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:paddingStart="20dp"
-            android:textColor="#000"
             android:paddingEnd="20dp"
             android:textSize="21sp"
+            android:textColor="@color/colorBlack"
             android:background="@drawable/edit_text_design"/>
 
     </com.google.android.material.textfield.TextInputLayout>
