new IDE test commit

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -61,7 +61,7 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/username_TIL"
+        android:layout_below="@id/username_TIL"
         android:layout_marginEnd="20dp"
         android:hint="Email"
         android:textColorHint="@color/colorYellow"
