--- a/app/src/main/res/menu/nav_options.xml
+++ b/app/src/main/res/menu/nav_options.xml
@@ -4,7 +4,8 @@
         <item
             android:id="@+id/profile"
             android:icon="@drawable/ic_account_circle_black_24dp"
-            android:title="Profile" />
+            android:title="Profile"
+            />
         <item
             android:id="@+id/event"
             android:icon="@drawable/ic_event_black_24dp"
@@ -21,7 +22,8 @@
             android:id="@+id/guide"
             android:icon="@drawable/ic_map_black_24dp"
             android:title="Guide" />
-        <item android:title="Want to Exit?">
+        <item
+            android:title="Want to Exit?">
             <menu>
                 <item
                     android:id="@+id/logout"
