bugs fixed again

--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -16,6 +16,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginStart="98dp"
         android:layout_marginTop="19dp"
         android:layout_marginEnd="81dp"
@@ -28,10 +29,11 @@
         android:layout_below="@+id/logoS"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="142dp"
+        android:layout_marginStart="117dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="82dp"
+        android:layout_marginEnd="107dp"
         android:fontFamily="@font/amarante"
+        android:gravity="center_horizontal"
         android:text="Login with Email"
         android:textColor="@android:color/black"
         android:textSize="18sp"
