--- a/app/src/main/res/layout/activity_signin_grant_access.xml
+++ b/app/src/main/res/layout/activity_signin_grant_access.xml
@@ -11,15 +11,16 @@
 
     <TextView
         android:id="@+id/txt1"
-        android:layout_width="202dp"
+        android:layout_width="256dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/logoG"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="129dp"
+        android:layout_marginStart="83dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="80dp"
+        android:layout_marginEnd="72dp"
         android:fontFamily="@font/amarante"
+        android:gravity="center_horizontal"
         android:text="Enter your password"
         android:textColor="@android:color/black"
         android:textSize="18sp"
@@ -75,6 +76,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginStart="98dp"
         android:layout_marginTop="19dp"
         android:layout_marginEnd="81dp"
