--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -4,17 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.SignUp"
-    android:background="@android:color/white">
+    android:background="#fff"
+    tools:context=".Activities.SignUp">
 
 
     <ImageButton
+        android:id="@+id/backBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_arrow_back_black_24dp"
-        android:background="#fff"
         android:layout_margin="15dp"
-        android:id="@+id/backBtn"/>
+        android:background="#fff"
+        android:src="@drawable/ic_arrow_back_black_24dp" />
 
     <TextView
         android:id="@+id/txt1"
@@ -64,12 +64,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/username_TIL"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:hint="Email"
-        android:textColorHint="@color/colorYellow"
-        android:layout_marginStart="20dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp">
+        android:textColorHint="@color/colorYellow">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/email_ET"
@@ -91,27 +91,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/email_TIL"
+        android:layout_centerHorizontal="true"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:hint="@string/password"
         android:textColorHint="@color/colorYellow"
-        android:layout_centerHorizontal="true"
         app:passwordToggleEnabled="true"
-        app:passwordToggleTint="@android:color/holo_orange_light"
-        android:layout_marginTop="10dp">
+        app:passwordToggleTint="@android:color/holo_orange_light">
 
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/password_ET"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/edit_text_design"
             android:inputType="textPassword"
-            android:textColor="#000"
             android:maxLines="1"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
-            android:textSize="21sp"
-            android:background="@drawable/edit_text_design"/>
+            android:textColor="#000"
+            android:textSize="21sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -121,25 +121,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/password_TIL"
+        android:layout_centerHorizontal="true"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:hint="Phone No"
-        android:textColorHint="@color/colorYellow"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp">
+        android:textColorHint="@color/colorYellow">
 
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/phoneEt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/edit_text_design"
             android:inputType="number"
-            android:textColor="#000"
             android:maxLines="1"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
-            android:textSize="21sp"
-            android:background="@drawable/edit_text_design"/>
+            android:textColor="#000"
+            android:textSize="21sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -149,24 +149,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/phone_TIL"
+        android:layout_centerHorizontal="true"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:hint="Address"
-        android:textColorHint="@color/colorYellow"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp">
+        android:textColorHint="@color/colorYellow">
 
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/address_ET"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/edit_text_design"
             android:inputType="text"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
-            android:textSize="21sp"
             android:textColor="@color/colorBlack"
-            android:background="@drawable/edit_text_design"/>
+            android:textSize="21sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -183,10 +183,6 @@
         android:text="Sign Up"
         android:textAllCaps="false"
         android:textColor="@color/colorYellow" />
-
-
-
-
 
 
 </RelativeLayout>
