--- a/app/src/main/res/menu/nav_options.xml
+++ b/app/src/main/res/menu/nav_options.xml
@@ -22,15 +22,20 @@
             android:id="@+id/guide"
             android:icon="@drawable/ic_map_black_24dp"
             android:title="Guide" />
+
+    </group>
+    <group
+        android:id="@+id/bottom"
+        android:checkableBehavior="single">
+
         <item
-            android:title="Want to Exit?">
-            <menu>
-                <item
-                    android:id="@+id/logout"
-                    android:title="logout"
-                    android:icon="@drawable/ic_power_settings_new_black_24dp"/>
-            </menu>
-        </item>
+            android:id="@+id/terms"
+            android:title="T &amp; C"
+            android:icon="@drawable/ic_note_black_24dp"/>
+        <item
+            android:id="@+id/logout"
+            android:title="logout"
+            android:icon="@drawable/ic_power_settings_new_black_24dp"/>
 
     </group>
 
