--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:src="@drawable/logo"
+                    android:layout_marginLeft="-10dp"
                     android:layout_centerHorizontal="true" />
 
             </RelativeLayout>
