--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -50,6 +50,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/edit_text_design"
             android:inputType="text"
+            android:fontFamily="@font/amarante"
             android:maxLines="1"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
@@ -78,6 +79,7 @@
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
             android:maxLines="1"
+            android:fontFamily="@font/amarante"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
             android:textColor="@color/colorBlack"
@@ -109,6 +111,7 @@
             android:background="@drawable/edit_text_design"
             android:inputType="textPassword"
             android:maxLines="1"
+            android:fontFamily="@font/amarante"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
             android:textColor="#000"
@@ -137,6 +140,7 @@
             android:background="@drawable/edit_text_design"
             android:inputType="number"
             android:maxLines="1"
+            android:fontFamily="@font/amarante"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
             android:textColor="#000"
@@ -164,6 +168,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/edit_text_design"
             android:inputType="text"
+            android:fontFamily="@font/amarante"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
             android:textColor="@color/colorBlack"
