--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -56,10 +56,11 @@
 
 
 
-                       <ImageButton
+                       <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
-                           android:background="@android:color/holo_red_light"
+                           app:civ_border_color="@android:color/white"
+                           app:civ_border_width="2dp"
                            android:src="@drawable/ic_person_black_24dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
