--- a/app/src/main/res/menu/nav_options.xml
+++ b/app/src/main/res/menu/nav_options.xml
@@ -5,24 +5,24 @@
         <item
             android:id="@+id/profile"
             android:icon="@drawable/ic_account_circle_black_24dp"
-            android:title="Profile"
-            />
+            android:title="Profile" />
+
+        <item
+            android:id="@+id/guide"
+            android:icon="@drawable/ic_map_black_24dp"
+            android:title="Guide" />
         <item
             android:id="@+id/event"
             android:icon="@drawable/ic_event_black_24dp"
             android:title="Event" />
         <item
             android:id="@+id/map"
-            android:icon="@drawable/ic_map_black_24dp"
+            android:icon="@drawable/ic_location_on_black_24dp"
             android:title="Map" />
         <item
             android:id="@+id/weather"
             android:icon="@drawable/ic_wb_incandescent_black_24dp"
             android:title="Weather" />
-        <item
-            android:id="@+id/guide"
-            android:icon="@drawable/ic_map_black_24dp"
-            android:title="Guide" />
 
     </group>
     <group
