--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -51,6 +51,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="20dp"
         android:hint="Email"
+        android:fontFamily="@font/amarante"
         android:textColorHint="@color/colorYellow">
 
         <com.google.android.material.textfield.TextInputEditText
