--- a/app/src/main/res/layout/activity_signin_grant_access.xml
+++ b/app/src/main/res/layout/activity_signin_grant_access.xml
@@ -36,6 +36,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="20dp"
         android:hint="@string/password"
+        android:fontFamily="@font/amarante"
         android:textColorHint="@color/colorYellow"
         app:passwordToggleEnabled="true"
         app:passwordToggleTint="@android:color/holo_orange_light">
